# ml-api-example

./: .pre-commit-config.yml  Dockerfile  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  support_request.yml
.github/workflows/: codeql.yml  main.yml  release.yml  test.yml
src/back/: dependencies.py  main.py
src/back/utils/: s3_connector.py
src/back/v1/transactions/: __init__.py  logic.py  models.py  router.py
