[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Vitor F. Diniz <vitorfdiniz@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
findspark = "^2.0.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pydocstyle = "^6.1.1"
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
isort = "^5.11.2"
mypy = "^0.991"


[tool.pytest.ini_options]
pythonpath = [ "src" ]
addopts = [ "--import-mode=importlib" ]

[tool.coverage.report]
exclude_lines = [ "if __name__ == .__main__.:" ]

[tool.mypy]
mypy_path = [ "src" ]
files = [ "src" ]
explicit_package_bases = true
namespace_packages = true
pretty = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
